--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "tournamentName": "[ТУРНИР]",
+    "tournamentName": "БУРГЕР ДУО",
     "seasonName": "Сезон 1",
     "eventDateText": "24 Октября",
     
