--- a/config.json
+++ b/config.json
@@ -1,23 +1,37 @@
 {
-    "tournamentName": "БУРГЕР ДУО",
+    "tournamentName": "[ТУРНИР]",
     "seasonName": "Сезон 1",
-    "eventDateText": "12 декабря 2025",
-    
+    "eventDateText": "24 Октября",
     "links": {
-        "https://discord.com/channels/754063467610374224/1445445992282456186",
-        "googleForm": "https://docs.google.com/forms/d/e/1FAIpQLScp3XxocuP-_QgOytbMIBXwanS5hXYlS_lfEXrFoPgFHR-NTg/viewform?embedded=true"
+        "discord": "https://discord.com/channels/754063467610374224/1445445992282456186",
+        "googleForm": "https://forms.google.com/..."
     },
-
     "status": {
         "registrationOpen": true,
-        "deadlineIso": "2025-12-11T18:00:00",
-        "spotsLeft": 16,
-        "totalSpots": 16
+        "deadlineIso": "2025-12-24T18:00:00",
+        "spotsLeft": 4
     },
-
     "messages": {
         "heroTitle": "Докажите мастерство",
-        "heroSubtitle": "Битва стратегий и командного духа. Никакого хаоса — только честная борьба.",
+        "heroSubtitle": "Битва стратегий...",
         "spotsAlert": "Осталось мест:"
-    }
+    },
+    "teams": [
+        {"name": "Alpha Squad", "r1": 1, "r2": 2, "r3": 0, "r4": 0},
+        {"name": "Beta Rush",   "r1": 4, "r2": 1, "r3": 0, "r4": 0},
+        {"name": "Gamma Team",  "r1": 2, "r2": 3, "r3": 0, "r4": 0},
+        {"name": "Delta Force", "r1": 3, "r2": 4, "r3": 0, "r4": 0},
+        {"name": "Echo Base",   "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Fox Trot",    "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Golden",      "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Heavy",       "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Iron",        "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Jade",        "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Kilo",        "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Luna",        "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Mystic",      "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Neon",        "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Omega",       "r1": 0, "r2": 0, "r3": 0, "r4": 0},
+        {"name": "Phantom",     "r1": 0, "r2": 0, "r3": 0, "r4": 0}
+    ]
 }
